# laperf

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile.laperf-cli  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: docker-build.yml  publish-laperf-power.yml  publish-pypi.yml
docs/: index.md  results.md
docs/getting-started/: installation.md
laperf-power/: README.md  pyproject.toml
laperf-power/laperf_power/: __init__.py  cli.py  power_metrics.py
results/: report_ASUSTeK COMPUTER INC. ASUS Vivobook Pro 15 N6506MV_N6506MV 1.0_dd76752e.json  report_Mac16,6_0a029ffa.json  report_Mac16,6_2ffebbf4.json
src/: settings.py
src/backend/: __init__.py
src/cli/: __init__.py
src/orchestration/: __init__.py
src/plots/: plot_efficiency.py  plot_llm_metrics.py  plot_vlm_metrics.py
src/reporting/: __init__.py
src/reporting/tables/: summary.py
