[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laperf"
version = "0.1.0"
description = "Local AI Performance Benchmark Suite - Reproducible AI hardware benchmarks with real-time power monitoring"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Bogdan Minko", email = "bogdan01m@gmail.com"}
]
keywords = ["ai", "benchmark", "performance", "gpu", "llm", "embeddings", "power-monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
]

[project.urls]
Homepage = "https://github.com/bogdanminko/laperf"
Documentation = "https://bogdanminko.github.io/laperf/"
Repository = "https://github.com/bogdanminko/laperf"
"Bug Tracker" = "https://github.com/bogdanminko/laperf/issues"

dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "hf-transfer>=0.1.9",
    "kernels>=0.10.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.5.0",
    "psutil>=7.1.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "simple-term-menu>=1.6.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-material-extensions>=1.3.0",
    "pymdown-extensions>=10.0.0",
]
quality = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
    "pre-commit>=4.0.0",
    "types-requests>=2.32.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
namespace_packages = true
explicit_package_bases = true
mypy_path = ["."]
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
]

# Часто помогает в FastAPI/SQLAlchemy проектах:
check_untyped_defs = true
warn_unused_ignores = true
